<resources>
    <string name="app_name">Osmosis</string>
    <string name="version">1.0.0</string>
    <string name="description">Never get lack of water at home or spend some penny in calling. Go online with Osmosis. Water can booking is just few clicks away </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <string name="email_signin">Email-id</string>
    <string name="password_signin">Password</string>
    <string name="signin_btn">Sign-in</string>
    <string name="password">Password</string>
    <string name="signup_text">New user? Signup here</string>
    <string name="signin_social">Sign in with your Google account?</string>

    <string name="book">Book</string>
</resources>
