<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/signin_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/email_signin"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dip"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/password"
                android:layout_marginBottom="15dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/signin_btn"
                android:textColor="@color/whtie" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/viewSeparator"
                android:orientation="vertical"
                android:padding="1dp">

                <Button
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/password"
                    android:background="@color/whtie"
                    android:text="@string/signup_text"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="16dp"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
